--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <nav class="navbar">
         <div>
             
-            <span>Location finder</span>
+            <span class="logo">Location finder</span>
         </div>
         <div class="menu">
         <ul class="nav-list">
@@ -36,7 +36,7 @@
     <div class="hero-section">
         <div class="image">
 
-            <img src="image/back.jpg" alt  ="no image" class="img" >
+            <img src="image/hero.jpg" alt  ="no image" class="img" >
         </div>
     </div>
 </header>
