Sign-Up Page: corrected input

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <h1>Manage your <br>
             dashboard</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla consequatur error eum sed explicabo modi!</p>
-            <button class="hero-btn">Get Started</button>
+            <button class="hero-btn">Get Started <i class="fa fa-user" aria-hidden="true"></i>
+            </button>
     </div>
     <div class="hero-section">
         <div class="image">
