latest contact update

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="sec2-contact">
-            <div class="header-contact txtblack-contact"> CONTACT US</div>
+            <div class="header2-contact txtblack-contact"> CONTACT US</div>
             <div class="line2-contact"></div> 
             <div class="line3-contact"></div>
             <div class="txt1div-contact">
