--- a/signup.html
+++ b/signup.html
@@ -289,8 +289,8 @@
       <div class="thrd-rw-su">
          <div class="checkbox-signup">
 
-             <input class="thrdinpt-su bg-danger" type="checkbox"/> 
-             <p class="bg">
+             <input class="thrdinpt-su" type="checkbox"/> 
+             <p class="bg-su">
                  By signing up, you agree to our <span class="spn-su">Terms</span>, <span class="spn-su">Data Policy</span> 
                  and <span class="spn-su">Cookies Policy</span>
                 </p>
@@ -307,7 +307,7 @@
               <img src="./image/bird-su.png"/>
           </div>
           <div class="img3-su ">
-              <img src="./image/insta.png" style="height: 40px;"/>
+              <img src="./image/insta.png" style="height: 30px;"/>
           </div>
       </div>
     </div>
